# lapse

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  API.md  Dockerfile  Dockerfile.bun  Dockerfile.optimized  Dockerfile.web  LICENSE.md  PERSISTENCE_IMPLEMENTATION.md  README.md  biome.json  bun.lockb  client.Dockerfile  docker-compose.dev.yaml  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sentry.server.config.ts  server.Dockerfile  tailwind.config.ts  tsconfig.json  turbo.json  worker.Dockerfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  desktop-build.yml  tests.yml
apps/api/: README.md  package.json  tsconfig.json
apps/client/: .env.example  next.config.ts  package.json  pnpm-lock.yaml  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json
apps/desktop/: .gitignore  electron-builder.yml  electron.vite.config.ts  index.html  (+2 more)
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: auth.rs  device.rs  encoding.rs  files.rs  lib.rs  main.rs  recording.rs  sources.rs  storage.rs
common/: index.ts  package.json  tsconfig.json
docs/: authentication.md  custom-clients.md
etc/: obo-flow.ts  slack_manifest.json
prisma/: approve.mjs  promote.js  schema.prisma
public/: manifest.json
web/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.ts  package.json  sentry.edge.config.ts  tailwind.config.ts  tsconfig.json
worker/: README.md  package.json  shared.ts
(+546 files in other folders)
